# nnsi-network-optimization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: methodology.md
experiments/: full_run_log.txt
nnsi/: __init__.py  __main__.py  analyzer.py
